# ignify

./: .gitignore  README.md  ignify.yaml  pyproject.toml
ignify/: config.py  exceptions.py  main.py  transpiler.py
ignify/transpiler/: commands.py  transpiler.py
